--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -11,8 +11,8 @@ sphinx:
 python:
   # Install our python package before building the docs
   install:
-    - path: .
-    - method: pip
+    path: .
+    method: pip
     
 formats:
   - pdf
